Add Get Player Endpoint and Logic
